--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             border-color: #088cff;
             border-width: 2px;
         }
+        small {
+            font-size: 10px;
+        }
         button {
 
         }
@@ -45,30 +48,78 @@
 <body>
     <div style="position: relative;">
         <canvas id="canvas" style="background:black; cursor:pointer;"></canvas>
-        <div class="box" style="position: absolute;right: 140px;top: 20px;width: 100px;">
-            <button onclick="addColor()" style="margin-bottom: 5px;">
-                New color
-            </button>
-            <div style="display:flex;justify-content: space-between; font-size: 8px;margin-bottom: 4px;">
-                <div>< Q</div><div>W ></div>
+        <div style="position: absolute;top: 20px;right: 10px; display: flex;">
+            <div class="box" style="width: 100px;margin-right: 10px;">
+                <button onclick="addColor()" style="margin-bottom: 5px;">
+                    New color
+                </button>
+                <div style="display:flex;justify-content: space-between; font-size: 8px;margin-bottom: 4px;">
+                    <div>< Q</div><div>W ></div>
+                </div>
+                <div id="color_div" style="display: flex;flex-wrap: wrap;">
+                </div>
             </div>
-            <div id="color_div" style="display: flex;flex-wrap: wrap;">
+            <div class="box" style="min-width: 100px;">
+                <button onclick="addLayer()" style="margin-bottom: 5px;">
+                    New layer
+                </button>
+                <div style="display: flex;">
+                    <div style="font-size: 8px; margin-right: 8px;">
+                        <div style="transform: rotate(90deg);"> < </div>
+                        <div style="margin-bottom:10px;">E</div>
+                        <div>D</div>
+                        <div style="transform: rotate(90deg);"> > </div>
+                    </div>
+                    <div id="layer_div">
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="box" style="position: absolute;right: 10px;top: 20px;width: 100px;">
-            <button onclick="addLayer()" style="margin-bottom: 5px;">
-                New layer
-            </button>
-            <div id="layer_div">
+        <div class="box" style="position: absolute;left: 10px; top: 20px;display:flex;flex-direction: column;">
+            <small>Dot size</small>
+            <input id="size_input" value="2" type="number" placeholder="Dot size" onchange="dotSizeChanged(this.value)" style="">
+            <div style="display:flex;justify-content: space-between;font-size: 8px;margin-bottom:6px;">
+                <div>< A</div><div>S ></div>
             </div>
+
+            <small>Image size</small>
+            <input id="image_size_input" value="56" type="number" placeholder="Image size" onchange="imageSizeChanged(this.value)" style="margin-bottom:6px;">
+
+            <small>Layer offset</small>
+            <div style="display: flex;">
+                <div style="margin-right: 6px;">
+                    <small>x</small>
+                    <input id="layer_x" type="number" style="width: 50px;" onchange="moveLayer()">
+                </div>
+                <div style="margin-right:6px;">
+                    <small>y</small>
+                    <input id="layer_y" type="number" style="width: 50px;" onchange="moveLayer()">
+                </div>
+                <button onclick="centerH()" title="Center horizontal">cH</button>
+                <button onclick="centerV()" title="Center vertical">cV</button>
+            </div>
+
+            <small>Layer size</small>
+            <div style="display: flex;">
+                <div style="margin-right: 6px;">
+                    <small>width</small>
+                    <input id="layer_w" type="number" style="width: 50px;" onchange="resizeLayerW()">
+                </div>
+                <div style="margin-right: 6px;">
+                    <small>height</small>
+                    <input id="layer_h" type="number" style="width: 50px;" onchange="resizeLayerH()">
+                </div>
+                <button id="layer_wh" onclick="toggleLayerWH()" title="Block/Unblock keep original size ratio">B</button>
+            </div>
+            <button onclick="uploadImage()" style="margin-top:10px">Upload image</button>
+            <button onclick="savePNG()" style="margin-top:10px">Save as PNG</button>
         </div>
-        <button style="position:absolute;right: 270px;top: 20px;" onclick="savePNG()">Save as PNG</button>
     </div>
 </body>
 <script>
     const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
-    const P_SIZE = 56;
+    const canvasCtx = canvas.getContext("2d");
+    var P_SIZE = 56;
     var DOT_SIZE = 2;
 
     var DRAW_SIZE = 500;
@@ -87,35 +138,184 @@
 
     const layerDiv = document.getElementById("layer_div");
     const colorDiv = document.getElementById("color_div");
+    const sizeInput = document.getElementById("size_input");
+    DOT_SIZE = parseInt(sizeInput.value);
+
+    function dotSizeChanged(value) {
+        DOT_SIZE = parseInt(Math.floor(Math.max(1,Math.min(value, P_SIZE/2))));
+        drawCanvas();
+
+        sizeInput.value = DOT_SIZE;
+    }
+
+    function imageSizeChanged(value) {
+        P_SIZE = parseInt(Math.floor(Math.max(56,value)));
+        drawCanvas();
+    }
+
+    const layerX = document.getElementById("layer_x");
+    const layerY = document.getElementById("layer_y");
+
+    function moveLayer(x=null,y=null) {
+        if(x == null) {
+            x = parseInt(layerX.value);
+        } else {
+            layerX.value = x;
+        }
+        if(y == null) {
+            y = parseInt(layerY.value);
+        } else {
+            layerY.value = y;
+        }
+        LAYERS[CURRENT_LAYER].x = x;
+        LAYERS[CURRENT_LAYER].y = y;
+
+        drawCanvas();
+    }
+
+    const layerW = document.getElementById("layer_w");
+    const layerH = document.getElementById("layer_h");
+
+    function resizeLayerW(){
+        resizeLayer(parseInt(layerW.value),null);
+    }
+    function resizeLayerH(){
+        resizeLayer(null,parseInt(layerH.value));
+    }
+
+    function resizeLayer(w=null,h=null) {
+        if(w == null) {
+            if(LAYERS[CURRENT_LAYER].blockWH) {
+                w = h*LAYERS[CURRENT_LAYER].ow/LAYERS[CURRENT_LAYER].oh;
+                layerW.value = w;
+            } else {
+                w = parseInt(layerW.value);
+            }
+        } else {
+            layerW.value = w;
+        }
+        if(h == null) {
+            if(LAYERS[CURRENT_LAYER].blockWH) {
+                h = w*LAYERS[CURRENT_LAYER].oh/LAYERS[CURRENT_LAYER].ow;
+                layerH.value = h;
+            } else {
+                h = parseInt(layerH.value);
+            }
+        } else {
+            layerH.value = h;
+        }
+        LAYERS[CURRENT_LAYER].w = w;
+        LAYERS[CURRENT_LAYER].h = h;
+
+        drawCanvas();
+    }
+
+    const layerWH = document.getElementById("layer_wh");
+
+    function toggleLayerWH() {
+        LAYERS[CURRENT_LAYER].blockWH = !LAYERS[CURRENT_LAYER].blockWH;
+        if(LAYERS[CURRENT_LAYER].blockWH) {
+            layerWH.innerHTML = "B";
+            resizeLayer(LAYERS[CURRENT_LAYER].w,null);
+        } else {
+            layerWH.innerHTML = "U";
+        }
+    }
+
+    function centerH() {
+        LAYERS[CURRENT_LAYER].x = P_SIZE*(DRAW_SIZE/2-LAYERS[CURRENT_LAYER].w/2)/DRAW_SIZE;
+        layerX.value = LAYERS[CURRENT_LAYER].x;
+
+        drawCanvas();
+    }
+    function centerV() {
+        LAYERS[CURRENT_LAYER].y = P_SIZE*(DRAW_SIZE/2-LAYERS[CURRENT_LAYER].h/2)/DRAW_SIZE;
+        layerY.value = LAYERS[CURRENT_LAYER].y;
+
+        drawCanvas();
+    }
 </script>
 <script>
     var LAYERS = [
-        newLayer()
     ];
+    LAYERS.push(newLayer());
     var CURRENT_LAYER = 0;
     var COLORS = [
         "#000",
         "#fff",
+        "#eee",
         "#f00",
         "#0f0",
-        "#00f"
+        "#00f",
+        "#2b0000",
+        "#5a0000",
+        "#8f0000",
+        "#c42020",
+        "#ff4a4a",
+        "#ff7a7a",
+        "#ffb0b0",
+        "#ffd6d6",
+        "#fff0f0",
+
+        "#002b00",
+        "#005a00",
+        "#008f00",
+        "#20c420",
+        "#4aff4a",
+        "#7aff7a",
+        "#b0ffb0",
+        "#d6ffd6",
+        "#f0fff0",
+
+        "#00002b",
+        "#00005a",
+        "#00008f",
+        "#2020c4",
+        "#4a4aff",
+        "#7a7aff",
+        "#b0b0ff",
+        "#d6d6ff",
+        "#f0f0ff",
+
     ];
     var CURRENT_COLOR = 0;
 
-    function newLayer() {
+    function newLayer(name=null,content=null) {
+        let width = DRAW_SIZE;
+        let height = DRAW_SIZE;
+        if(content != null) {
+            width = content.width;
+            height = content.height;
+
+            if(name == null) {
+                name = `Image ${LAYERS.length}`;
+            }
+        } else {
+            if(name == null) {
+                name = `Layer ${LAYERS.length}`;
+            }
+        }
         return {
+            'name':name,
             'x':0,
             'y':0,
+            'w':width,
+            'h':height,
+            'ow':width,
+            'oh':height,
             'commands':[],
             'map':{},
             'lastColor':null,
-            'showing':true
+            'showing':true,
+            'content':content,
+            'blockWH':true
         }
     }
 
-    function addLayer() {
-        LAYERS.push(newLayer());
+    function addLayer(content=null) {
+        LAYERS.push(newLayer(null,content));
         refreshLayer();
+        layerSelected(LAYERS.length-1);
     }
 
     function toggleLayer(l) {
@@ -134,10 +334,14 @@
         let html = "";
         LAYERS.forEach((l,i)=>{
             html += `<div id="layer_${i}" class="innerBox" onclick="layerSelected(${i})">
-            <span>Layer ${i}</span>
-            <button onclick="event.stopPropagation();toggleLayer(${i})">${l.showing?'H':'S'}</button>
-        </div>`;
-    });
+            <span>${l.name}</span>
+            <button onclick="event.stopPropagation();toggleLayer(${i})" title="Show/Hide layer" style="margin-left:4px;margin-right:4px;">${l.showing?'H':'S'}</button>`
+            if(i > 0)
+                html += `<button onclick="upLayer(${i})" title="Move layer to back" style="transform:rotate(90deg)"><</button>`;
+            if(i < LAYERS.length-1)
+                html += `<button onclick="downLayer(${i})" title="Move layer to front" style="transform:rotate(90deg)">></button>`
+            html += `</div>`;
+        });
         layerDiv.innerHTML = html;
     }
 
@@ -186,6 +390,19 @@
         drawCanvas();
     }
 
+    function upLayer(i) {
+        let layer = LAYERS.splice(i,1);
+        LAYERS.splice(i-1,0,layer[0]);
+        CURRENT_LAYER -= 1;
+        buildLayerDiv();
+    }
+    function downLayer(i) {
+        let layer = LAYERS.splice(i,1);
+        LAYERS.splice(i+1,0,layer[0]);
+        CURRENT_LAYER += 1;
+        buildLayerDiv();
+    }
+
     function layerSelected(i) {
         let layer = document.getElementById("layer_"+CURRENT_LAYER);
         if(layer != null)
@@ -194,6 +411,15 @@
         CURRENT_LAYER = i;
         layer = document.getElementById("layer_"+CURRENT_LAYER);
         layer.classList.add('selected');
+
+        layerX.value = LAYERS[CURRENT_LAYER].x;
+        layerY.value = LAYERS[CURRENT_LAYER].y;
+        layerW.value = LAYERS[CURRENT_LAYER].w;
+        layerH.value = LAYERS[CURRENT_LAYER].h;
+        if(LAYERS[CURRENT_LAYER].blockWH)
+            layerWH.innerHTML = "B";
+        else
+            layerWH.innerHTML = "U";
 
         if(typeof drawCanvas !== 'undefined')
             drawCanvas();
@@ -228,36 +454,36 @@
 </script>
 <script>
     function drawCanvas() {
-        ctx.fillStyle = "#000";
-        ctx.fillRect(0,0,canvas.width,canvas.height);
+        canvasCtx.fillStyle = "#000";
+        canvasCtx.fillRect(0,0,canvas.width,canvas.height);
 
         let x = START_X;
         let y = START_Y;
 
-        ctx.fillStyle = "#fff";
-        ctx.fillRect(x,y,DRAW_SIZE,DRAW_SIZE);
+        canvasCtx.fillStyle = "#fff";
+        canvasCtx.fillRect(x,y,DRAW_SIZE,DRAW_SIZE);
 
         drawBack();
 
-        ctx.save();
-        ctx.translate(START_X,START_Y);
+        canvasCtx.save();
+        canvasCtx.translate(START_X,START_Y);
         const ratio =  DRAW_SIZE/P_SIZE;
         LAYERS.forEach((l,i)=>{
             if(l.showing)
-                drawLayer(ctx, l,ratio,CURRENT_LAYER==i);
+                drawLayer(canvasCtx, l,ratio,true,CURRENT_LAYER==i);
         });
-        ctx.restore();
+        canvasCtx.restore();
 
         drawGrid(x,y,ratio);
     }
 
     function drawBack() {
-        ctx.fillStyle = "#ddd";
-        const size = DRAW_SIZE/P_SIZE*2;
+        canvasCtx.fillStyle = "#ddd";
+        const size = DRAW_SIZE/P_SIZE*4;
         let extra = 0;
         for(let x=START_X; x<START_X+DRAW_SIZE; x+=size) {
             for(let y=START_Y+extra; y<START_Y+DRAW_SIZE; y+=size*2) {
-                ctx.fillRect(x, y, size, size);
+                canvasCtx.fillRect(x, y, Math.min(size,START_X+DRAW_SIZE-x), Math.min(size,START_Y+DRAW_SIZE-y));
             }
             if(extra == 0)
                 extra = size;
@@ -267,26 +493,38 @@
     }
 
     function drawGrid(xi,yi,ratio) {
-        ctx.strokeStyle = "red";
-        ctx.lineWidth = 0.5;
+        canvasCtx.strokeStyle = "red";
+        canvasCtx.lineWidth = 0.5;
         for (let x = xi; x <= xi+DRAW_SIZE; x += DOT_SIZE*ratio) {
-            ctx.beginPath();
-            ctx.moveTo(x, yi);
-            ctx.lineTo(x, yi+DRAW_SIZE);
-            ctx.stroke();
+            canvasCtx.beginPath();
+            canvasCtx.moveTo(x, yi);
+            canvasCtx.lineTo(x, yi+DRAW_SIZE);
+            canvasCtx.stroke();
         }
         for (let y = yi; y <= yi+DRAW_SIZE; y += DOT_SIZE*ratio) {
-            ctx.beginPath();
-            ctx.moveTo(xi, y);
-            ctx.lineTo(xi+DRAW_SIZE, y);
-            ctx.stroke();
+            canvasCtx.beginPath();
+            canvasCtx.moveTo(xi, y);
+            canvasCtx.lineTo(xi+DRAW_SIZE, y);
+            canvasCtx.stroke();
         }
     }
 
-    function drawLayer(ctx, layer,ratio,border=false) {
+    function drawLayer(ctx, layer,ratio,border=false,highlight=false,contentS=DRAW_SIZE) {
         ctx.save();
         ctx.translate(layer.x*ratio,layer.y*ratio);
+        if(border) {
+            if(highlight) {
+                ctx.globalAlpha = 1;
+            } else {
+                ctx.globalAlpha = .5;
+            }
+        }
 
+        if(layer.content) {
+            ctx.drawImage(layer.content,
+                0,0,layer.content.width,layer.content.height,
+                0,0,layer.w*contentS/DRAW_SIZE,layer.h*contentS/DRAW_SIZE);
+        }
         layer.commands.forEach(c => {
             const cmd = c[0];
             if(cmd.includes('fillStyle')) {
@@ -297,11 +535,17 @@
                 ctx.fillRect(parts[0]*ratio, parts[1]*ratio, parts[2]*ratio, parts[3]*ratio);
             }
         });
-
         if(border) {
-            ctx.strokeStyle = "#0f0";
-            ctx.lineWidth = 4;
-            ctx.strokeRect(0,0,DRAW_SIZE,DRAW_SIZE);
+            if(highlight) {
+                ctx.globalAlpha = 1;
+                ctx.strokeStyle = "#0f0";
+                ctx.lineWidth = 4;
+            } else {
+                ctx.globalAlpha = .5;
+                ctx.strokeStyle = "#00f";
+                ctx.lineWidth = 1;
+            }
+            ctx.strokeRect(0,0,layer.w,layer.h);
         }
 
         ctx.restore();
@@ -343,23 +587,64 @@
             let color = Math.max(CURRENT_COLOR-1,0);
             colorSelect(color);
         } else if(event.key === 'ArrowUp') {
-            LAYERS[CURRENT_LAYER].y -= DOT_SIZE;
+            moveLayer(null,LAYERS[CURRENT_LAYER].y-DOT_SIZE);
         } else if(event.key === 'ArrowDown') {
-            LAYERS[CURRENT_LAYER].y += DOT_SIZE;
+            moveLayer(null,LAYERS[CURRENT_LAYER].y+DOT_SIZE);
         } else if(event.key === 'ArrowLeft') {
-            LAYERS[CURRENT_LAYER].x -= DOT_SIZE;
+            moveLayer(LAYERS[CURRENT_LAYER].x-DOT_SIZE,null);
         } else if(event.key === 'ArrowRight') {
-            LAYERS[CURRENT_LAYER].x += DOT_SIZE;
+            moveLayer(LAYERS[CURRENT_LAYER].x+DOT_SIZE,null);
         } else if (event.key === 'n' || event.key === 'N') {
             addColor();
         } else if (event.key === 'a' || event.key === 'A') {
-            DOT_SIZE = Math.max(1,DOT_SIZE/2);
+            dotSizeChanged(DOT_SIZE/2);
         } else if (event.key === 's' || event.key === 'S') {
-            DOT_SIZE = Math.max(1,DOT_SIZE*2);
+            dotSizeChanged(DOT_SIZE*2);
+        } else if (event.key === 'e' || event.key === 'E') {
+            layerSelected(Math.max(0,CURRENT_LAYER-1));
+        } else if (event.key === 'd' || event.key === 'D') {
+            layerSelected(Math.min(LAYERS.length-1,CURRENT_LAYER+1));
+        } else if (event.key === 'i' || event.key === 'I') {
+            uploadImage();
         }
-        // console.log(event.key);
-        drawCanvas();
+
+        let num = parseInt(event.key);
+        if(isNaN(num) && event.key != 'Backspace' && event.key != 'meta' && event.key != 'shift' && event.key != 'r') {
+            event.preventDefault();
+            const inputs = document.querySelectorAll('input, button, select, textarea');
+            inputs.forEach(element => {
+                element.blur();
+            });
+        }
+        
+        console.log(event.key);
     });
+
+    const FILE_READER = new FileReader();
+    FILE_READER.onload = function(e) {
+        var img = document.createElement("img");
+        img.crossOrigin = 'anonymous';
+        img.src = e.target.result;
+        img.onload = function() {
+            let vCanvas = document.createElement("canvas");
+            vCanvas.width = img.width;
+            vCanvas.height = img.height;
+            let vCtx = vCanvas.getContext('2d');
+            vCtx.drawImage(img,0,0);
+            addLayer(vCanvas);
+        }
+    };
+
+    function uploadImage() {
+        let input = document.createElement('input');
+        input.type = "file";
+        input.accept = "image/png, image/gif, image/jpeg";
+        input.addEventListener("change", (event) => {
+            if(event.target.files[0])
+                FILE_READER.readAsDataURL(event.target.files[0]);
+        });
+        input.click();
+    }
 
     function savePNG() {
         const virtual_canvas = document.createElement('canvas');
@@ -369,7 +654,7 @@
 
         LAYERS.forEach(l=>{
             if(l.showing)
-                drawLayer(virtual_ctx, l,1);
+                drawLayer(virtual_ctx, l,1,null,null,P_SIZE);
         });
 
         const url = virtual_canvas.toDataURL('image/png');
